erDiagram
    LOCALES {
        int id PK
        varchar nombre
        text direccion
        varchar ciudad
        boolean activo
        int usuario_comercial_id
        timestamp fecha_creacion
    }

    CATEGORIAS {
        int id PK
        varchar nombre UK
        text descripcion
        boolean activa
        int usuario_comercial_id
        timestamp fecha_creacion
    }

    PRODUCTOS {
        int id PK
        varchar nombre
        text descripcion
        int categoria_id FK
        varchar codigo_barras UK
        numeric precio_unitario
        boolean activo
        int usuario_comercial_id
        timestamp fecha_creacion
        timestamp fecha_actualizacion
    }

    STOCK {
        int id PK
        int producto_id FK
        int local_id FK
        int cantidad
        int cantidad_minima
        timestamp fecha_actualizacion
    }

    MOVIMIENTOS {
        int id PK
        int producto_id FK
        int local_id FK
        varchar tipo
        int cantidad
        int cantidad_anterior
        int cantidad_nueva
        int usuario_id
        int venta_id
        text observaciones
        timestamp fecha
    }

    ALERTAS {
        int id PK
        varchar tipo
        int producto_id FK
        int local_id FK
        text mensaje
        boolean leida
        timestamp fecha_creacion
    }

    CATEGORIAS ||--o{ PRODUCTOS : "agrupa"
    PRODUCTOS ||--o{ STOCK : "stock en"
    LOCALES ||--o{ STOCK : "almacena"
    PRODUCTOS ||--o{ MOVIMIENTOS : "registra"
    LOCALES ||--o{ MOVIMIENTOS : "ocurre en"
    PRODUCTOS ||--o{ ALERTAS : "genera"
    LOCALES ||--o{ ALERTAS : "alerta en"
